Adding AllowAdminCreateUserOnly To Block Anon User Creation

--- a/waf-dashboard.yaml
+++ b/waf-dashboard.yaml
@@ -178,6 +178,8 @@ Resources:
     Type: AWS::Cognito::UserPool
     Properties:
       UserPoolName: 'WAFKibanaUsers'
+      AdminCreateUserConfig:
+        AllowAdminCreateUserOnly: True
       UsernameAttributes:
         - email
       AutoVerifiedAttributes:
