--- a/pom.xml
+++ b/pom.xml
@@ -38,6 +38,7 @@
 
     <dependencies>
         <!-- AWS Cloud Development Kit -->
+<!--
         <dependency>
             <groupId>software.amazon.awscdk</groupId>
             <artifactId>core</artifactId>
@@ -75,7 +76,24 @@
             <artifactId>cognito</artifactId>
             <version>${cdk.version}</version>
         </dependency>
+-->
 
+        <dependency>
+            <groupId>software.amazon.awscdk</groupId>
+            <artifactId>aws-cdk-lib</artifactId>
+            <version>2.85.0</version>
+        </dependency>
+        <!-- dependency>
+            <groupId>software.amazon.awscdk</groupId>
+            <artifactId>code-star-alpha</artifactId>
+            <version>2.0.0-alpha.1</version>
+        </dependency -->
+
+        <dependency>
+            <groupId>software.constructs</groupId>
+            <artifactId>constructs</artifactId>
+            <version>10.2.56</version>
+        </dependency>
 
         <dependency>
           <groupId>org.junit.jupiter</groupId>
