--- a/pom.xml
+++ b/pom.xml
@@ -40,42 +40,14 @@
         <!-- AWS Cloud Development Kit -->
         <dependency>
             <groupId>software.amazon.awscdk</groupId>
-            <artifactId>core</artifactId>
-            <version>${cdk.version}</version>
+            <artifactId>aws-cdk-lib</artifactId>
+            <version>2.85.0</version>
         </dependency>
         <dependency>
-            <groupId>software.amazon.awscdk</groupId>
-            <artifactId>ec2</artifactId>
-            <version>${cdk.version}</version>
+            <groupId>software.constructs</groupId>
+            <artifactId>constructs</artifactId>
+            <version>10.2.56</version>
         </dependency>
-        <dependency>
-            <groupId>software.amazon.awscdk</groupId>
-            <artifactId>opensearchservice</artifactId>
-            <version>${cdk.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>software.amazon.awscdk</groupId>
-            <artifactId>kinesisfirehose</artifactId>
-            <version>${cdk.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>software.amazon.awscdk</groupId>
-            <artifactId>events-targets</artifactId>
-            <version>${cdk.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>software.amazon.awscdk</groupId>
-            <artifactId>lambda-python</artifactId>
-            <version>${cdk.version}</version>
-        </dependency>
-
-
-        <dependency>
-            <groupId>software.amazon.awscdk</groupId>
-            <artifactId>cognito</artifactId>
-            <version>${cdk.version}</version>
-        </dependency>
-
 
         <dependency>
           <groupId>org.junit.jupiter</groupId>
